# speech-parser-docker

./: .gitignore  Dockerfile  Dockerfile-old  LICENSE  README.md  docker-compose.yaml  environment.yml  main.py  main_cli.py  pyproject.toml  requirements.txt
audio_files/: ZOOM0067.csv  ZOOM0067.json  ZOOM0067_converted.rttm  ZOOM0067_example_batch.csv  ZOOM0067_example_split.csv
audio_processing/: __init__.py  convert_audio.py  process_audio.py  save_results.py
configs/: .env.default  .env.docker  .env.sample  .env.windows  .wslconfig  README-new.md  STRUCTURE.md  docker-compose-absolute-path.yaml  docker-compose-relative-path.yaml  model_faster.conf  model_precise.conf
models/: __init__.py  download.py  download_llama.py  download_model.py
models/prompts/: prompt_mistral.txt  prompt_stable_diffusion.txt
scripts/: __init__.py  docker-build.bat  docker-copy-output.bat  docker-delete-output.bat  docker-prune.bat  docker-reset-wsl.bat  move_model_in.py  move_model_out.py
speech_analyzer/: __init__.py  call_api.py  csv_loader.py  custom_llama.py  dialogue_analyzer.py  dialogue_analyzer_df.py  gpt_loader.py  loader.py  model_loader.py  promt_utils.py
speech_parser/: README.md  __init__.py  speech_parser.py
speech_parser/audio_processing/: convert_audio.py  process_audio.py  save_results.py  speaker_identify.py
speech_parser/tests/: test_cuda.py  test_ffmpeg.py  test_openai.py
speech_parser/utils/: __init__.py  cli.py  config.py  env.py  env_manager.py  helpers.py  punctuation.py  speerecon.py  trans.py
utils/: __init__.py  helpers.py  recon_setup.py
