[tool.poetry]
name = "speech-parser-docker"
version = "0.1.0"
description = "Python script and Docker microservice for splitting WAV dialogue records and running Vosk pipeline for speaker and word recognition."
authors = ["beyond de grave <terraquanttech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-repo/speech-parser-docker"
repository = "https://github.com/your-repo/speech-parser-docker"
keywords = [
    "speech",
    "recognition",
    "vosk",
    "docker",
    "audio",
    "parser",
    "gpu",
    "speech-to-text",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.poetry.dependencies]
# python = ">=3.11"
python = ">=3.9,<3.10"
vosk = "^0.3.45"
torch = "^2.0.0"
numpy = "^1.20.3"
scipy = "^1.6.3"
tqdm = "^4.65.0"
loguru = "^0.7.0"
pydub = "^0.25.1"
"pyannote.audio" = "^3.3.2"
# pyAudioAnalysis = "^0.3.14"
# pyAudioAnalysis = { optional = true }
nltk = "^3.8.1"
eyeD3 = { version = "^0.9.6", markers = "python_version < '4.0'" }
# rake-nltk = "^1.0.6"
requests = "^2.28.1"
python-dotenv = "^1.0.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.1.0"
mypy = "^1.2.0"

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "black", "mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
speech-parser = "speech_parser.main:main"
